--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
         <label for="NameBox">Name: </label><input type="text" id="NameBox"><br>
         <button type='button' id='UploadButton' class='Button'>Upload</button>
       </span>
+        <span id="percent"></span>
     </div>
   </body>
 </html>
