파일 다운로드 문제로 인해서 socket.io-stream을 이용한 파일 업로드 방식으로 전체 변경 작업 수행 중에 있습니다.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
   <title><%= title %></title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <script src="/socket.io/socket.io.js"></script>
+  <script src="/library/socket.io-stream.js"></script>
   <script src="/javascripts/socket.js"></script>
 </head>
 <body>
