socket을 이용한 파일 업로드 및 다운로드 percentage 기능 추가

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,7 @@
   </span>
   <span id="percent"></span>
   <button id="download">다운로드</button>
+  <span id="download_percent"></span>
 </div>
 </body>
 </html>
