--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,19 +5,29 @@
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <script src="/socket.io/socket.io.js"></script>
   <script src="/library/socket.io-stream.js"></script>
+  <script src="/jszip/jszip.min.js"></script>
+  <script src="/jszip/jszip-utils.min.js"></script>
   <script src="/javascripts/socket.js"></script>
 </head>
 <body>
 <div id="UploadBox">
-  <h2>Video Uploader</h2>
-  <span id='UploadArea'>
+  <div>
+    <h2>대용량 파일 업로드/다운로드(압축)</h2>
+    <span id='UploadArea'>
         <label for="FileBox">Choose A File: </label><input type="file" id="FileBox"><br>
         <label for="NameBox">Name: </label><input type="text" id="NameBox"><br>
         <button type='button' id='UploadButton' class='Button'>Upload</button>
-  </span>
-  <span id="percent"></span>
-  <button id="download">다운로드</button>
-  <span id="download_percent"></span>
+   </span>
+    <span id="percent"></span>
+  </div>
+  <br>
+  <div>
+    <button id="download">다운로드</button>
+    <br>
+    <span id="download_percent"></span>
+    <br>
+    <span id="zip_percent"></span>
+  </div>
 </div>
 </body>
 </html>
