다운로드 진행률 표시 없애고 바로 다운로드 방식 연구

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,7 @@
   <br>
   <div>
     <button id="download">다운로드</button>
+    <button id="another_download">다른 방식으로 다운로드</button>
     <br>
     <span id="download_percent"></span>
     <br>
