--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <script src="/socket.io/socket.io.js"></script>
   <script src="/library/socket.io-stream.js"></script>
+  <script src="/library/jquery.min.js"></script>
   <script src="/jszip/jszip.min.js"></script>
   <script src="/jszip/jszip-utils.min.js"></script>
 
